--- a/src/main/resources/META-INF/properties/hibernate.properties
+++ b/src/main/resources/META-INF/properties/hibernate.properties
@@ -1,9 +1,13 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-url=jdbc:mysql://localhost:3306/admin_manage?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://120.24.254.154:3306/admin_manage?useUnicode=true&characterEncoding=UTF-8
 username=root
-password=123456
+password=Aa36221512
+
+#url=jdbc:mysql://localhost:3306/admin_manage?useUnicode=true&characterEncoding=UTF-8
+#username=root
+#password=123456
 
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
