--- a/src/main/resources/META-INF/properties/hibernate.properties
+++ b/src/main/resources/META-INF/properties/hibernate.properties
@@ -1,9 +1,9 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-url=jdbc:mysql://120.24.254.154:3306/admin_manage?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://123:3306/admin_manage?useUnicode=true&characterEncoding=UTF-8
 username=root
-password=Aa36221512
+password=123
 
 #url=jdbc:mysql://localhost:3306/admin_manage?useUnicode=true&characterEncoding=UTF-8
 #username=root
